tests/baselines/reference/parenthesizedContexualTyping1(strict=true).errors.txt
parenthesizedContexualTyping1.ts(18,14): error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
  Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
    Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(19,14): error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
  Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
    Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(20,14): error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
  Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
    Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(21,15): error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
  Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
    Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(27,31): error TS2322: Type 'undefined' is not assignable to type 'string'.
parenthesizedContexualTyping1.ts(27,32): error TS2695: Left side of comma operator is unused and has no side effects.
parenthesizedContexualTyping1.ts(27,55): error TS2322: Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(27,56): error TS2695: Left side of comma operator is unused and has no side effects.
parenthesizedContexualTyping1.ts(28,32): error TS2322: Type 'undefined' is not assignable to type 'string'.
parenthesizedContexualTyping1.ts(28,33): error TS2695: Left side of comma operator is unused and has no side effects.
parenthesizedContexualTyping1.ts(28,56): error TS2322: Type 'undefined' is not assignable to type 'number'.
parenthesizedContexualTyping1.ts(28,57): error TS2695: Left side of comma operator is unused and has no side effects.


==== parenthesizedContexualTyping1.ts (12 errors) ====
    function fun<T>(g: (x: T) => T, x: T): T;
    function fun<T>(g: (x: T) => T, h: (y: T) => T, x: T): T;
    function fun<T>(g: (x: T) => T, x: T): T {
        return g(x);
    }
    
    var a = fun(x => x, 10);
    var b = fun((x => x), 10);
    var c = fun(((x => x)), 10);
    var d = fun((((x => x))), 10);
    
    var e = fun(x => x, x => x, 10);
    var f = fun((x => x), (x => x), 10);
    var g = fun(((x => x)), ((x => x)), 10);
    var h = fun((((x => x))), ((x => x)), 10);
    
    // Ternaries in parens
    var i = fun((Math.random() < 0.5 ? x => x : x => undefined), 10);
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
!!! error TS2345:   Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
!!! error TS2345:     Type 'undefined' is not assignable to type 'number'.
    var j = fun((Math.random() < 0.5 ? (x => x) : (x => undefined)), 10);
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
!!! error TS2345:   Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
!!! error TS2345:     Type 'undefined' is not assignable to type 'number'.
    var k = fun((Math.random() < 0.5 ? (x => x) : (x => undefined)), x => x, 10);
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
!!! error TS2345:   Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
!!! error TS2345:     Type 'undefined' is not assignable to type 'number'.
    var l = fun(((Math.random() < 0.5 ? ((x => x)) : ((x => undefined)))), ((x => x)), 10);
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '((x: number) => number) | ((x: number) => undefined)' is not assignable to parameter of type '(x: number) => number'.
!!! error TS2345:   Type '(x: number) => undefined' is not assignable to type '(x: number) => number'.
!!! error TS2345:     Type 'undefined' is not assignable to type 'number'.
    
    var lambda1: (x: number) => number = x => x;
    var lambda2: (x: number) => number = (x => x);
    
    type ObjType = { x: (p: number) => string; y: (p: string) => number };
    var obj1: ObjType = { x: x => (x, undefined), y: y => (y, undefined) };
                                  ~~~~~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
!!! related TS6502 parenthesizedContexualTyping1.ts:26:21: The expected type comes from the return type of this signature.
                                   ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                          ~~~~~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6502 parenthesizedContexualTyping1.ts:26:47: The expected type comes from the return type of this signature.
                                                           ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    var obj2: ObjType = ({ x: x => (x, undefined), y: y => (y, undefined) });
                                   ~~~~~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
!!! related TS6502 parenthesizedContexualTyping1.ts:26:21: The expected type comes from the return type of this signature.
                                    ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                           ~~~~~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6502 parenthesizedContexualTyping1.ts:26:47: The expected type comes from the return type of this signature.
                                                            ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.